# TailSketch

./: CMakeLists.txt  CodeDescription.md  README.md
ComparisonSchemes/SandwichSketch/: README.md
ComparisonSchemes/SandwichSketch/CPU/: CMakeLists.txt  DHHResult.py  HCResult.py  HHResult.py  README.md  main.cpp
ComparisonSchemes/SandwichSketch/CPU/Algos/: Abstract.h  Algos.h  CMHash.h  CocoSketch.h  CountHash.h  LogLogFilter.h  Ours_Item.h  Ours_ItemFull.h  Ours_Set.h  SpaceSaving.h  USS.h  USSHeap.h
ComparisonSchemes/SandwichSketch/CPU/Bench/: DistributedHHBench.h  MultiHHBench.h  SingleHCBench.h  SingleHHBench.h
ComparisonSchemes/SandwichSketch/CPU/Common/: MMap.h  Util.h
ComparisonSchemes/SandwichSketch/CPU/Struct/: BitMap.h  CMSketch.h  CSketch.h  DLeftHashingTable.h  Heap.h  StreamSummary.h
src/: adaptive_main.cpp  sketch_comparison.cpp
src/core/: AdaptiveHuffmanLearner.cpp  AdaptiveHuffmanLearner.h  AdaptiveHuffmanTree.cpp  AdaptiveHuffmanTree.h  BloomFilter.cpp  BloomFilter.h  CountMinSketch.cpp  CountMinSketch.h  FIFOStorage.h  FrequentTable.h  Packet.h  TailSketch.cpp  TailSketch.h
src/experiment/: AdaptiveExperimentRunner.cpp  AdaptiveExperimentRunner.h  Logger.cpp  Logger.h  Metrics.cpp  Metrics.h
src/external_sketches/adapters/: CocoSketchAdapter.cpp  CocoSketchAdapter.h  HyperUSSAdapter.cpp  HyperUSSAdapter.h  SandwichSketchAdapter.cpp  SandwichSketchAdapter.h  SketchAdapter.h  USSAdapter.cpp  USSAdapter.h
src/hash/: hash.cpp
src/io/: PcapReader.cpp  PcapReader.h
